[package]
name = "lspdb_wasm"
version = "0.2.0"
authors = ["mumu"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies]
lspdb = { path = ".." }
elrond-wasm-output = { version="0.6.0", features=["wasm-output-mode"]}

[workspace]
